--- a/apps/ablab_setup/ablabsetup/DESCRIPTION
+++ b/apps/ablab_setup/ablabsetup/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ablabsetup
-Title: What the Package Does (One Line, Title Case)
+Title: Logic for ablab_setup
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Fredrik",
