--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,3 +1,6 @@
+# Disable protocols not supported by google cloud run
+disable_protocols websocket xdr-streaming xhr-streaming iframe-eventsource iframe-htmlfile xdr-polling iframe-xhr-polling;
+
 # Instruct Shiny Server to run applications as the user "shiny"
 run_as shiny;
 
